Update page - equity.html 5d7e6b435edf603b9d9385ca65d2c369dc5d0d88

--- a/equity/index.html
+++ b/equity/index.html
@@ -169,7 +169,7 @@
 
 
 
-<ul><li><strong><a href="#addressing-health-equity" data-type="internal" data-id="#addressing-health-equity">How California is addressing health inequity</a></strong></li><li><strong><a href="#overview-of-disparities">Overview of disparities in our diverse communities</a></strong></li><li><strong><a href="#reopening-equitably">California’s plan to reopen equitably</a></strong></li><li><strong><a href="#community-impact">See data on how communities are impacted in your county</a></strong></li><li><strong><a href="#factors">See how other factors increase the risk of COVID-19</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#addressing-health-equity" data-type="internal" data-id="#addressing-health-equity">How California is addressing health inequity</a></strong></li><li><strong><a href="#overview-of-disparities">Overview of disparities in our diverse communities</a></strong></li><li><strong><a href="#reopening-equitably">California’s plan to reopen equitably</a></strong></li><li><strong><a href="#community-impact">See data on how communities are impacted in your county</a></strong></li><li><strong><a href="#factors">See how other factors increase the risk of COVID-19</a></strong></li></ul>
 
 
 
@@ -325,7 +325,8 @@
           <div class="col-lg-10 mx-auto color-white">
             <h2 class="text-center color-orange" id="reopening-equitably">Reopening equitably</h2>
             <h3 class="color-white" id="what-weve-done">What we’ve done</h3>
-            <p>California has taken action to begin addressing health equity. For example, in the Central Valley we implemented a comprehensive approach to help those most affected. This included:</p>
+            <p>California has taken action to begin addressing health equity. In the Central Valley we implemented a comprehensive approach to help those most affected. </p>This included:
+</p>
             <ul class="bullet-orange">
               <li>Deploying support teams uniting public health, social services, food and agriculture, housing and community development, aging, and business agencies</li>
               <li>Developing culturally- and linguistically-accessible messages and resources for diverse communities including Latinos, Mixtecos, Punjabis, and Hmong</li>
@@ -336,8 +337,14 @@
               <li>Training bilingual, bicultural contact tracers and case investigators</li>
               <li>Creating Housing for the Harvest to help farm workers self-isolate</li>
             </ul>
+</p>Vaccines are an important part of how California is responding to health inequities. Throughout the state, we recognize that forty percent (40%) of COVID-19 cases and deaths occur in California’s lowest Healthy Places Index (HPI) quartile. The <a href="https://healthyplacesindex.org/">Healthy Places Index</a>, developed by the Public Health Alliance of Southern California, helps us visualize community conditions such as low income, education completeness, and health care access. Accordingly, 40% of our vaccines are being distributed to HPI quartile 1.</p>
+
+On March 12, 2021, California reached 2 million vaccination doses in the vaccine equity metric. We look ahead to reaching our second goal of 4 million vaccines administered to people in HPI quartile 1.
+
             <h3 class="color-white" id="need-to-do">What we need to do</h3>
-            <p>To ensure we build a California for All, counties must address COVID-19 health inequities in their economic reopening plans. Each week, state officials work with local health departments to measure overall county case rates and positivity rates, as well as positivity rates in the county’s most disproportionately-impacted neighborhoods (<a href="#learn-more">health equity metric</a>).</p>
+            <p>To ensure we build a California for All, we’ve integrated equity into the Blueprint for a Safer Economy tiers. When California reaches milestones in the number of vaccine doses administered to people in HPI quartile 1, the Blueprint tiers are updated to allow for somewhat higher case rates in the tiers. Learn more about these changes in CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">Blueprint for a Safer Economy framework</a>. <p>
+
+Additionally, counties must address COVID-19 health inequities in their economic reopening plans. Each week, state officials work with local health departments to measure overall county case rates and positivity rates, as well as positivity rates in the county’s most disproportionately-impacted neighborhoods (<a href="#learn-more">health equity metric</a>).</p>
             <p>As part of this broad effort, counties must:</p>
             <ul class="bullet-orange">
               <li>Define their disproportionately impacted populations and measure COVID-19 metrics and response (contact tracing, isolation support, worker protections) in these populations</li>
@@ -473,7 +480,7 @@
 
 
 
-<p>The health equity metric measures the positivity rate in the most disproportionately-impacted communities. These communities are identified in the <a href="#learn-more">Healthy Places Index</a> as census tracts that have less healthy community conditions such as low median income, education completeness, and health care access. The <a href="#learn-more" aria-label="Blueprint for a Safer Economy, which you can reach through the Learn more section">Blueprint for a Safer Economy</a> ensures that counties address COVID-19 in all communities. To open further, the health equity metric cannot significantly fall behind overall county positivity rates.</p>
+<p>The health equity metric measures the positivity rate in the most disproportionately-impacted communities. These communities are identified in the <a href="#learn-more">Healthy Places Index</a>, developed by the Public Health Alliance of Southern California, as census tracts that have less healthy community conditions such as low median income, education completeness, and health care access. The Blueprint for a Safer Economy ensures that counties address COVID-19 in all communities. To open further, the health equity metric cannot significantly fall behind overall county positivity rates. Read more about the <a href="#learn-more" data-type="internal" data-id="#learn-more">reopening plan that includes the health equity metric</a>.</p>
 
 
 
@@ -687,6 +694,11 @@
     </div>
   </div>
 </div>
+
+
+
+<!-- Ethnio Activation Code -->
+<script type="text/javascript" language="javascript" src="//ethn.io/81005.js" async="true" charset="utf-8"></script>
 
 
 
