Update translation - 104985294 (#3870) 85cd456002a2cbd42a34d10e3c90651b76ec8855

--- a/ko/travel/index.html
+++ b/ko/travel/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>여행</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 2일 오전 11:58</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 23일 오후 6:24</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>본 페이지의 내용은 다음과 같습니다:</p>
+<p class="h3">본 페이지의 내용:</p>
 
 
 
-<ul><li><strong><a href="#why-travel-is-risky">여행이 위험한 이유</a></strong></li><li><strong><a href="#whats-considered-essential-travel">필수 여행에 해당하는 경우</a></strong></li><li><strong><a href="#current-travel-recommendations">현행 여행 관련 권고안</a></strong></li><li><strong><a href="#questions-and-answers">질문 및 답변</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#why-travel-is-risky">여행이 위험한 이유</a></strong></li><li><strong><a href="#whats-considered-essential-travel">필수 여행에 해당하는 경우</a></strong></li><li><strong><a href="#current-travel-recommendations">현행 여행 관련 권고안</a></strong></li><li><strong><a href="#questions-and-answers">질문 및 답변</a></strong></li></ul>
 
 
 
