--- a/ar/housing-for-agricultural-workers/index.html
+++ b/ar/housing-for-agricultural-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>السكن للعمال الزراعيين</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;5:26 م الساعة 11 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;6:22 م الساعة 23 مارس 2021</p>
           
         </div>
       </div>
@@ -161,7 +161,7 @@
 
 
 
-<p>ستجد في هذه الصفحة ما يلي:</p>
+<p class="h3">في هذه الصفحة:</p>
 
 
 
