--- a/ar/travel/index.html
+++ b/ar/travel/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>السفر</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;11:58 ص الساعة 2 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;6:24 م الساعة 23 مارس 2021</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>ستجد في هذه الصفحة ما يلي:</p>
+<p class="h3">في هذه الصفحة:</p>
 
 
 
-<ul><li><strong><a href="#why-travel-is-risky">الأسباب التي تجعل السفر محفوفًا بالمخاطر</a></strong></li><li><strong><a href="#whats-considered-essential-travel">ما يعتبر من الأمور الضرورية للسفر</a></strong></li><li><strong><a href="#current-travel-recommendations">توصيات السفر الحالية</a></strong></li><li><strong><a href="#questions-and-answers">أسئلة وإجابات</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#why-travel-is-risky">الأسباب التي تجعل السفر محفوفًا بالمخاطر</a></strong></li><li><strong><a href="#whats-considered-essential-travel">ما يعتبر من الأمور الضرورية للسفر</a></strong></li><li><strong><a href="#current-travel-recommendations">توصيات السفر الحالية</a></strong></li><li><strong><a href="#questions-and-answers">أسئلة وإجابات</a></strong></li></ul>
 
 
 
