--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;March 24, 2021 at 10:24 PM</p>
+            <p class="small-text">Last updated&nbsp;March 25, 2021 at 8:43 AM</p>
           
         </div>
       </div>
