--- a/es/data-and-tools/index.html
+++ b/es/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Datos y herramientas</h1>
           
-            <p class="small-text">Última actualización&nbsp;24 de marzo de 2021 a las 10:24 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;25 de marzo de 2021 a las 8:43 a. m.</p>
           
         </div>
       </div>
