--- a/es/housing-for-agricultural-workers/index.html
+++ b/es/housing-for-agricultural-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Viviendas para trabajadores agrícolas</h1>
           
-            <p class="small-text">Última actualización&nbsp;11 de marzo de 2021 a las 5:26 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;23 de marzo de 2021 a las 6:22 p. m.</p>
           
         </div>
       </div>
@@ -161,7 +161,7 @@
 
 
 
-<p>En esta página encontrará:</p>
+<p class="h3">En esta página encontrará:</p>
 
 
 
