--- a/es/travel/index.html
+++ b/es/travel/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Viajes</h1>
           
-            <p class="small-text">Última actualización&nbsp;2 de febrero de 2021 a las 11:58 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;23 de marzo de 2021 a las 6:24 p. m.</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>En esta página encontrará:</p>
+<p class="h3">En esta página encontrará:</p>
 
 
 
-<ul><li><strong><a href="#why-travel-is-risky">por qué viajar es un riesgo</a></strong></li><li><strong><a href="#whats-considered-essential-travel">qué se considera un viaje esencial</a></strong></li><li><strong><a href="#current-travel-recommendations">recomendaciones sobre viaje actuales</a></strong></li><li><strong><a href="#questions-and-answers">preguntas y respuestas</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#why-travel-is-risky">por qué viajar es un riesgo</a></strong></li><li><strong><a href="#whats-considered-essential-travel">qué se considera un viaje esencial</a></strong></li><li><strong><a href="#current-travel-recommendations">recomendaciones sobre viaje actuales</a></strong></li><li><strong><a href="#questions-and-answers">preguntas y respuestas</a></strong></li></ul>
 
 
 
