--- a/ko/housing-for-agricultural-workers/index.html
+++ b/ko/housing-for-agricultural-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>농업 근로자를 위한 거처</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 11일 오후 5:26</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 23일 오후 6:22</p>
           
         </div>
       </div>
@@ -161,7 +161,7 @@
 
 
 
-<p>본 페이지의 내용은 다음과 같습니다:</p>
+<p class="h3">본 페이지의 내용:</p>
 
 
 
