--- a/tl/housing-for-agricultural-workers/index.html
+++ b/tl/housing-for-agricultural-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pabahay para sa mga manggagawa sa agrikultura</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 11, 2021 sa 5:26 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 23, 2021 sa 6:22 PM</p>
           
         </div>
       </div>
@@ -161,7 +161,7 @@
 
 
 
-<p>Sa page na ito, makikita mo ang sumusunod:</p>
+<p class="h3">Sa page na ito:</p>
 
 
 
