--- a/tl/travel/index.html
+++ b/tl/travel/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Paglalakbay</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 2, 2021 sa 11:58 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 23, 2021 sa 6:24 PM</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>Sa page na ito, makikita mo ang sumusunod:</p>
+<p class="h3">Sa page na ito:</p>
 
 
 
-<ul><li><strong><a href="#why-travel-is-risky">Bakit mapanganib na maglakbay</a></strong></li><li><strong><a href="#whats-considered-essential-travel">Ano ang itinuturing na mahalagang paglalakbay</a></strong></li><li><strong><a href="#current-travel-recommendations">Mga kasalukuyang rekomendasyon sa paglalakbay</a></strong></li><li><strong><a href="#questions-and-answers">Mga tanong at sagot</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#why-travel-is-risky">Bakit mapanganib na maglakbay</a></strong></li><li><strong><a href="#whats-considered-essential-travel">Ano ang itinuturing na mahalagang paglalakbay</a></strong></li><li><strong><a href="#current-travel-recommendations">Mga kasalukuyang rekomendasyon sa paglalakbay</a></strong></li><li><strong><a href="#questions-and-answers">Mga tanong at sagot</a></strong></li></ul>
 
 
 
