--- a/zh-hans/housing-for-agricultural-workers/index.html
+++ b/zh-hans/housing-for-agricultural-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>为农业劳工提供的住房</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月11日, 下午5:26</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月23日, 下午6:22</p>
           
         </div>
       </div>
@@ -161,7 +161,7 @@
 
 
 
-<p>您将在本页面中了解以下内容：</p>
+<p class="h3">此页面包含的内容：</p>
 
 
 
