--- a/zh-hans/travel/index.html
+++ b/zh-hans/travel/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>出行</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月2日, 上午11:58</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月23日, 下午6:24</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>您将在本页面中了解以下内容：</p>
+<p class="h3">此页面包含的内容：</p>
 
 
 
-<ul><li><strong><a href="#why-travel-is-risky">为何出行充满风险</a></strong></li><li><strong><a href="#whats-considered-essential-travel">哪些出行被视为必要出行</a></strong></li><li><strong><a href="#current-travel-recommendations">现时出行建议</a></strong></li><li><strong><a href="#questions-and-answers">问题与解答</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#why-travel-is-risky">为何出行充满风险</a></strong></li><li><strong><a href="#whats-considered-essential-travel">哪些出行被视为必要出行</a></strong></li><li><strong><a href="#current-travel-recommendations">现时出行建议</a></strong></li><li><strong><a href="#questions-and-answers">问题与解答</a></strong></li></ul>
 
 
 
