--- a/zh-hant/housing-for-agricultural-workers/index.html
+++ b/zh-hant/housing-for-agricultural-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>為農業勞工提供的住房</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年3月11日, 下午5:26</p>
+            <p class="small-text">最近更新&nbsp;2021年3月23日, 下午6:22</p>
           
         </div>
       </div>
@@ -161,7 +161,7 @@
 
 
 
-<p>您將在本頁面中了解以下內容：</p>
+<p class="h3">此頁面包含的內容：</p>
 
 
 
