--- a/zh-hant/travel/index.html
+++ b/zh-hant/travel/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>出行</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月2日, 上午11:58</p>
+            <p class="small-text">最近更新&nbsp;2021年3月23日, 下午6:24</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>您將在本頁面中了解以下內容：</p>
+<p class="h3">此頁面包含的內容：</p>
 
 
 
-<ul><li><strong><a href="#why-travel-is-risky">為何出行充滿風險</a></strong></li><li><strong><a href="#whats-considered-essential-travel">哪些出行被視為必要出行</a></strong></li><li><strong><a href="#current-travel-recommendations">現時出行建議</a></strong></li><li><strong><a href="#questions-and-answers">問題與解答</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#why-travel-is-risky">為何出行充滿風險</a></strong></li><li><strong><a href="#whats-considered-essential-travel">哪些出行被視為必要出行</a></strong></li><li><strong><a href="#current-travel-recommendations">現時出行建議</a></strong></li><li><strong><a href="#questions-and-answers">問題與解答</a></strong></li></ul>
 
 
 
